# painel-do-legislativo

./: .gitignore  app.js  index.html  styles.css
backend/: README.md  pyproject.toml
backend/docs/: data-model.md  source-inventory.md
backend/src/legislativo_backend/: __init__.py  cli.py  db.py  http.py  normalizers.py  pipeline.py  storage.py  supabase_client.py  supabase_schema.sql
backend/src/legislativo_backend/collectors/: __init__.py  camara.py  portal_transparencia.py  senado.py
backend/supabase/.temp/: linked-project.json  pooler-url  project-ref
backend/supabase/migrations/: 20260613175514_init_schema.sql  20260613175810_align_column_names.sql  20260613181325_fix_expense_columns.sql  20260613182353_enforce_rls_readonly.sql  20260613182526_harden_readonly.sql  20260614012832_add_senado_discursos.sql  20260614013500_harden_discursos_and_future.sql  20260623000100_add_raw_payloads_indexes_views.sql  20260623000200_add_fulltext_search.sql  20260623000300_add_rpc_aggregations.sql  20260623000400_add_votacoes.sql  20260623000500_add_emendas.sql
backend/tests/: test_camara_pagination.py  test_cli_db.py  test_http_and_helpers.py  test_local_db.py  test_normalizers.py
docs/: PROJECT.md
functions/_lib/: legislativo.js
next/: next.config.ts  package-lock.json  package.json
next/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
next/src/app/dashboard/: page.tsx
next/src/app/fontes/: page.tsx
next/src/data/: comparacao.ts  hooks.ts  liveData.ts  mockLegislativo.ts  pdfExport.ts  queries.ts  supabase.ts  toast.tsx  types.ts
(+1 files in other folders)
