[project]
name = "painel-legislativo-backend"
version = "0.1.0"
description = "Coletores de dados oficiais para o Painel do Legislativo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "psycopg2-binary>=2.9.12",
  "pydantic>=2.12.0",
  "python-dotenv>=1.2.0",
  "supabase>=2.31.0",
  "tenacity>=9.1.2",
  "typer>=0.20.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[project.scripts]
legislativo = "legislativo_backend.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/legislativo_backend"]
